add form framework to index.html

--- a/index.html
+++ b/index.html
@@ -5,9 +5,25 @@
   <link rel="stylesheet" href="css/styles.css">
   <script src="js/jquery-3.4.1.js"></script>
   <script src="js/scripts.js"></script>
-  <title>Beep Boop</title>
+  <title>Beep Boop!</title>
 </head>
 <body>
-    
+    <div class="container">
+      <h1>Welcome to Beep Boop!</h1>
+      <p>This webpage will take a number, and list out the range of numbers to user inputted number. Theres a catch though, it will also dynamically change some of the numbers to silly phrases!
+      </p>
+      <h3>Enter your number below to see what happens</h3>
+      <form id="form">
+        <label for="input-number">Enter your number here:</label>
+        <input type="text">
+        <button type="submit">Go!</button>
+      </form>
+      <div id="results">
+        <ul>
+          <li>words and stuff</li>
+        </ul>
+      </div>
+
+    </div>
 </body>
 </html>
