complete requirements of first two specs

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
       <h3>Enter your number below to see what happens</h3>
       <form id="form">
         <label for="input-number">Enter your number here:</label>
-        <input type="text">
+        <input type="text" id="input-number">
         <button type="submit">Go!</button>
       </form>
       <div id="results">
         <ul>
-          <li>words and stuff</li>
+          
         </ul>
       </div>
 
