add nested for loop to potentially help with conditionals

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h3>Enter your number below to see what happens</h3>
       <form id="form">
         <label for="input-number">Enter your number here:</label>
-        <input type="text" id="input-number">
+        <input type="text" class="input-number">
         <button type="submit">Go!</button>
       </form>
       <div id="results">
