change color of results card

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <button type="submit">Go!</button>
       </form>
       <div class="card" id="results">
-        <div class="card-header">
+        <div class="card-header bg-success">
           Here are your results:
         </div>
         <div class="card-body">
