add functionality for app to be used multiple times, correctly hide results card update specs in readme

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <form id="form">
           <label for="input-number">Enter your number here:</label>
         <input type="text" class="input-number">
-        <button type="submit">Go!</button>
+        <button type="submit" class="btn btn-primary">Go!</button>
       </form>
       <div class="card" id="results">
         <div class="card-header bg-success">
